[package]
name = "mem-track"
version = "0.1.0"
edition = "2024"

[dependencies]
addr2line = "0.25.0"
arrayvec = "0.7.6"
bytesize = "2.0.1"
crossbeam-utils = "0.8.21"
findshlibs = "0.10.2"
gimli = "0.32.0"
libc = "0.2.174"
memory-stats = "1.2.0"
thousands = "0.2.0"

[[example]]
name = "simple"
path = "examples/simple.rs"

[profile.release-with-debug]
inherits = "release"
debug = true
